--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,36 +1,4 @@
 ---
-- name: Install required packages for Docker.
-  apt:
-    name: "{{ PREREQUISITE_DOCKER_PACKAGES }}"
-    update_cache: yes
-
-- name: Add Docker official GPG key.
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-  become: yes
-
-- name: Install docker repository (stable).
-  apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/debian {{ ansible_lsb.codename }} stable
-
-- name: Install docker-ce.
-  apt:
-    name: docker-ce={{ DOCKER_VERSION }}
-    state: present
-    update_cache: yes
-
-- name: Setup sudoless docker.
-  include_tasks: sudoless-docker.yml
-
-- name: Install docker-compose.
-  get_url:
-    url: https://github.com/docker/compose/releases/download/{{ DOCKER_COMPOSE_VERSION }}/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}
-    dest: /usr/local/bin/docker-compose
-    mode: 0755
-
-# Install (docker-py) while ensuring the umask is 0022 (to ensure other users can use it)
-- name: Install docker Python library
-  pip:
-    name: docker
-  become: true
+- include: install_docker.yml
+- include: install_docker_compose.yml
+- include: sudoless_docker.yml
