--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 # Variables used in the 'docker' role.
 
-DOCKER_VERSION: 5:18.09.7~3-0~debian-stretch
+DOCKER_VERSION_DEBIAN: 5:18.09.7~3-0~debian-stretch
+DOCKER_VERSION_UBUNTU: 5:19.03.5~3-0~ubuntu-bionic
 DOCKER_COMPOSE_VERSION: 1.24.0
 PREREQUISITE_DOCKER_PACKAGES: 
   - apt-transport-https
